BigQuery bytes processed (#537)
