# docs/api/openapi.yaml
@@ -1170,32 +1170,22 @@ paths:
       summary: get a BigQueryBytesProcessed
       operationId: get_bigquery_bytes_processed
       description: |
-        Get the details of a BigQueryBytesProcessed by passing its id or the project name and date.
+        Get the total bytes processed by a BigQuery project for the last 24 hours.
       produces:
       - application/json
       parameters:
       - in: query
-        name: id
-        description: BigQueryBytesProcessed id
-        required: false
-        type: integer
-      - in: query
         name: project
-        description: BigQueryBytesProcessed type_id
-        required: false
+        description: the project id
+        required: true
         type: string
-      - in: query
-        name: date
-        description: Queries date
-        required: false
-        type: string
-        minLength: 10
-        maxLength: 10
       responses:
         200:
           description: the fetched BigQueryBytesProcessed
           schema:
-            $ref: '#/definitions/BigQueryBytesProcessed'
+            type: integer
+            description: The total number of BigQuery bytes used for the project in the last 24 hours
+            example: 126538
         400:
           description: bad input parameter
         401:
@@ -1224,60 +1214,6 @@ paths:
           description: BigQueryBytesProcessed created, returning the created object with an id
           schema:
             $ref: '#/definitions/BigQueryBytesProcessed'
-        401:
-          description: API key is missing or invalid
-          $ref: '#/responses/UnauthorizedError'
-    put:
-      tags:
-      - Observatory
-      summary: create or update a BigQueryBytesProcessed
-      operationId: put_bigquery_bytes_processed
-      description: |
-        Create a BigQueryBytesProcessed by passing a BigQueryBytesProcessed object, without an id. Update an existing BigQueryBytesProcessed by
-        passing a BigQueryBytesProcessed object with an id.
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      parameters:
-      - in: body
-        name: body
-        description: BigQueryBytesProcessed to create or update
-        required: true
-        schema:
-          $ref: '#/definitions/BigQueryBytesProcessed'
-      responses:
-        200:
-          description: BigQueryBytesProcessed updated
-          schema:
-            $ref: '#/definitions/BigQueryBytesProcessed'
-        201:
-          description: BigQueryBytesProcessed created, returning the created object with an id
-          schema:
-            $ref: '#/definitions/BigQueryBytesProcessed'
-        401:
-          description: API key is missing or invalid
-          $ref: '#/responses/UnauthorizedError'
-    delete:
-      tags:
-      - Observatory
-      summary: delete a BigQueryBytesProcessed
-      operationId: delete_bigquery_bytes_processed
-      description: |
-        Delete a BigQueryBytesProcessed by passing it's id.
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      parameters:
-      - in: query
-        name: id
-        description: BigQueryBytesProcessed id
-        required: true
-        type: integer
-      responses:
-        200:
-          description: BigQueryBytesProcessed deleted
         401:
           description: API key is missing or invalid
           $ref: '#/responses/UnauthorizedError'
@@ -1564,11 +1500,6 @@ definitions:
       total:
         type: integer
         example: 0
-      date:
-        type: string
-        minLength: 10
-        maxLength: 10
-        example: 2020-01-01
       created:
         type: string
         format: date-time
